# task-manager

./: .gitignore  CLAUDE.md  PROJECT_KNOWLEDGE_BASE.md  README.md  TESTING.md  run_mcp.bat
.claude/: settings.json
.claude/agents/: code-reviewer.md  task-planner.md  test-writer.md
.claude/commands/: daily-plan.md  prioritize-tasks.md  weekly-review.md
.claude/skills/: add-test.md  git-commit.md
backend/: .env.example  pyproject.toml
backend/app/: auth.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: tasks.py
backend/tests/: conftest.py  test_tasks_api.py
hooks/: post_edit.ps1  post_edit.sh  precheck_secrets.py
mcp-server/: api_client.py  pyproject.toml  server.py
mcp-server/prompts/: daily_plan.py  prioritize_tasks.py  weekly_review.py
mcp-server/resources/: task_resources.py
mcp-server/tests/: test_task_resources.py  test_tasks_crud.py  test_tools.py
mcp-server/tools/: tasks_crud.py
