[project]
name = "task-manager-mcp"
version = "0.1.0"
description = "MCP server for the Task Manager API"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "black>=24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "api_client"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "resources*", "prompts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
